// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArtifactPanel parity snapshots > renders empty-state panel (no artifacts) matching AGI sidebar shape 1`] = `
<div
  class="flex flex-col bg-zinc-50 dark:bg-zinc-950 h-full"
>
  <div
    class="flex items-center justify-between px-4 py-3 border-b border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900 shrink-0"
  >
    <div
      class="flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-code-xml w-4 h-4 text-zinc-500"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m18 16 4-4-4-4"
        />
        <path
          d="m6 8-4 4 4 4"
        />
        <path
          d="m14.5 4-5 16"
        />
      </svg>
      <span
        class="font-medium text-sm"
      >
        Artifacts
      </span>
    </div>
    <div
      class="flex items-center gap-1"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-7 w-7"
        data-state="closed"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-maximize2 lucide-maximize-2 h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="m21 3-7 7"
          />
          <path
            d="m3 21 7-7"
          />
          <path
            d="M9 21H3v-6"
          />
        </svg>
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-7 w-7"
        data-state="closed"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="flex-1 flex items-center justify-center p-8 text-center"
  >
    <div
      class="max-w-[240px]"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-code-xml h-12 w-12 mx-auto mb-4 text-zinc-300 dark:text-zinc-700"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m18 16 4-4-4-4"
        />
        <path
          d="m6 8-4 4 4 4"
        />
        <path
          d="m14.5 4-5 16"
        />
      </svg>
      <h3
        class="font-medium text-zinc-900 dark:text-zinc-100 mb-1"
      >
        No artifacts yet
      </h3>
      <p
        class="text-sm text-zinc-500"
      >
        Artifacts will appear here when AGI Workforce generates code, documents, or other content.
      </p>
    </div>
  </div>
</div>
`;

exports[`ArtifactPanel parity snapshots > renders panel header with Copy/Expand toolbar buttons 1`] = `
<div>
  <div
    class="flex flex-col bg-zinc-50 dark:bg-zinc-950 h-full"
  >
    <div
      class="flex items-center justify-between px-4 py-3 border-b border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900 shrink-0"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-code-xml w-4 h-4 text-zinc-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m18 16 4-4-4-4"
          />
          <path
            d="m6 8-4 4 4 4"
          />
          <path
            d="m14.5 4-5 16"
          />
        </svg>
        <span
          class="font-medium text-sm"
        >
          Artifacts
        </span>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-7 w-7"
          data-state="closed"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-maximize2 lucide-maximize-2 h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="m21 3-7 7"
            />
            <path
              d="m3 21 7-7"
            />
            <path
              d="M9 21H3v-6"
            />
          </svg>
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-7 w-7"
          data-state="closed"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex-1 flex items-center justify-center p-8 text-center"
    >
      <div
        class="max-w-[240px]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-code-xml h-12 w-12 mx-auto mb-4 text-zinc-300 dark:text-zinc-700"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m18 16 4-4-4-4"
          />
          <path
            d="m6 8-4 4 4 4"
          />
          <path
            d="m14.5 4-5 16"
          />
        </svg>
        <h3
          class="font-medium text-zinc-900 dark:text-zinc-100 mb-1"
        >
          No artifacts yet
        </h3>
        <p
          class="text-sm text-zinc-500"
        >
          Artifacts will appear here when AGI Workforce generates code, documents, or other content.
        </p>
      </div>
    </div>
  </div>
</div>
`;
